--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,18 +39,21 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
+        working-directory: ./sos_mascota
 
       - name: Create Dummy Service Account
         run: |
           mkdir -p assets/keys
           echo '{}' > assets/keys/service_account.json
+        working-directory: ./sos_mascota
 
       - name: Run Tests with Coverage
         run: flutter test --coverage --dart-define=API_TOKEN="${{ secrets.API_TOKEN }}"
-
+        working-directory: ./sos_mascota
       - name: Fix Coverage Paths
         run: |
-          sed -i "s|SF:lib/|SF:$GITHUB_WORKSPACE/lib/|g" coverage/lcov.info
+          sed -i "s|SF:lib/|SF:$GITHUB_WORKSPACE/sos_mascota/lib/|g" coverage/lcov.info
+        working-directory: ./sos_mascota
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v6.0.0
